@@ -78,10 +78,12 @@ sub enable
 	my ($self, $service) = @_;
 
 	if($self->_isUpstart($service)) {
-		return 0 unless $self->SUPER::enable($service);
+		# Ensure that sysvinit script if any is not enabled
+		my $ret = $self->_isSysvinit($service) ? $self->iMSCP::Provider::Service::Debian::Sysvinit::disable($service) : 0;
+		return $ret ||= $self->SUPER::enable($service);
 	}
 
-	# Also enable the underlying sysvinit script if any
+	# Enable sysvinit script if any
 	if($self->_isSysvinit($service)) {
 		return $self->iMSCP::Provider::Service::Debian::Sysvinit::enable($service);
 	}
@@ -106,7 +108,7 @@ sub disable
 		return 0 unless $self->SUPER::disable($service);
 	}
 
-	# Also disable the underlying sysvinit script if any
+	# Disable the sysvinit script if any
 	if($self->_isSysvinit($service)) {
 		return $self->iMSCP::Provider::Service::Debian::Sysvinit::disable($service);
 	}
@@ -131,7 +133,7 @@ sub remove
 		return 0 unless $self->SUPER::remove($service);
 	}
 
-	# Also remove the underlying sysvinit script if any
+	# Remove the sysvinit script if any
 	if($self->_isSysvinit($service)) {
 		return $self->iMSCP::Provider::Service::Debian::Sysvinit::remove($service);
 	}
